--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "repository": "git@github.com:acetdecastro/Kitra.git",
   "author": "Ace De Castro <acetdecastro@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon"
+  },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
