--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
