--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "typeorm": "^0.3.20",
     "zod": "^3.22.4"
   },
   "devDependencies": {
