--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mysql": "^2.18.1",
     "typeorm": "^0.3.20",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
+    "@types/mysql": "^2.15.26",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
