--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "author": "Ace De Castro <acetdecastro@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "seed:run": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/mysql": "^2.15.26",
