--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,13 @@
     "module": "NodeNext",
     "baseUrl": "src",
     "outDir": "dist",
+    "target": "es6",
     "sourceMap": true,
     "noImplicitAny": false,
     "strict": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": ["src/**/*"]
 }
